--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,59 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{color:#0B3B5B;}
+.tab-ui{@apply flex flex-wrap}
+.tab-ui li{@apply mr-7}
+.tab-ui li button{@apply inline-block pt-4 mb-4 uppercase border-b-2 border-transparent hover:text-red-600 hover:border-red-600 dark:hover:text-gray-300}
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+.pl40{padding-left: 40px !important;}
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+.theme-bg{background-color: #F0F1F7;}
+.theme-bg-blue{background-color: #D3E4F3;}
+.theme-bg-gray{background-color: #DADDE8;}
+.theme-bg-red{background-color: #F2DBE0;}
+.theme-bg-green{background-color: #bbe6bf;}
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
+.theme-bg-red-solid{background-color: #D81B2A;}
+.theme-bg-green-solid{background-color: #3BB54B;}
+.theme-bg-blue-solid{background-color: #1975C9;}
+.theme-bg-gray-solid{background-color: #0B3B5B;}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.theme-red-color{color: #D81B2A;}
+.theme-green-color{color: #3BB54B;}
+.theme-blue-color{color: #1975C9;}
+.theme-gray-color{color: #0B3B5B;}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.theme-blue-color{color: #2D9CDB;}
+.theme-gray-color{color: #5E6C93;}
+.theme-red-color{color: #FF5B5B;}
+.theme-green-color{color: #3BB54B;}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.ext-small-text{font-size: 10px;}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+.search-ui{width: 42rem}
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+.left-nav-ui{}
+.left-nav-ui li{}
+.left-nav-ui li a {padding: 10px 18px;font-size: 16px;color: #828282;}
+.left-nav-ui li a:hover{border-right: 3px solid #093A5A;}
+.left-nav-ui li a span{padding-left: 13px;}
+.left-nav-ui li a svg {font-size: 35px !important;padding: 6px !important;}
+.left-nav-ui li a:hover svg {background: #093A5A;padding: 4px;color: #fff;font-size: 40px;border-radius: 8px;}
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+.tab-ui1{}
+.tab-ui1 li{}
+.tab-ui1 li a {font-size: 12px;padding: 6px 8px;border-radius: 23px;color: #0B3B5B;}
+.tab-ui1 li a.active{background: #0B3B5B;color: #fff;}
+.custom-wdth{width: 87%;}
+.bullet-point-ui {display: flex;justify-content: space-around;}
+.bullet-point-ui li {font-size: 12px;display: flex;align-items: center;}
+.bullet-point-ui li span {width: 6px;height: 6px;display: inline-block;border-radius: 100%;margin-right: 5px;}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+.indicators-ui {display: flex;justify-content: center;margin-top: 15px;}
+.indicators-ui li {width: 8px;height: 8px;background: #CED5E1;border-radius: 100%;margin-right: 8px;}
+.active{background: #147AD6 !important;}
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+.logo{padding: 15px;padding-top: 30px;}
+.logo img{width: 95%;}
